feat: add feature for saving cards in sets refactor: rename files fix: fix tables, entities, models

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/scryfall
     username: scryfall-user
-    password: scryfall-password
+    password: scryfall
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
